--- a/conf/test-daily/test-daily.conf
+++ b/conf/test-daily/test-daily.conf
@@ -1,5 +1,6 @@
 [main]
-static_prefix=/test-daily/
+site_prefix=/test-daily/
+site_hostname=localhost
 
 #[tt]
 #INCLUDE_PATH=/usr/share/test-daily/tt-lib
