--- a/share/test-daily/tt/Makefile-project.tt2
+++ b/share/test-daily/tt/Makefile-project.tt2
@@ -1,13 +1,19 @@
 all: index.html
 
-# index file
-index.html: [% ttdir %]/project.tt2 [% FOREACH test IN folders; "$test/index.html "; END; %]
+# index file + summary
+index.html: summary.json rss.xml
+	touch index.html    # index.html is created together with summary.json
+
+summary.json: [% ttdir %]/project.tt2 [% FOREACH test IN folders; "$test/index.html "; END; %]
 	test-daily project-summary
+
+rss.xml: [% ttlibdir %]/atom.tt2 [% FOREACH test IN folders; "$test/rss.xml "; END; %]
+	test-daily aggregatefeeds [% curfolder %]
 
 [% FOREACH test IN folders; %]
 # make Makefile for test
 [% test %]/Makefile: [% ttdir %]/Makefile-test.tt2
-	test-daily test-makefile [% test %]
+	test-daily test-makefile [% test %] [% curfolder %]
 
 # make index.html
 [% test %]/index.html: [% test %]/Makefile
@@ -17,7 +23,7 @@ index.html: [% ttdir %]/project.tt2 [% FOREACH test IN folders; "$test/index.htm
 
 # clean up the mess
 clean:
-	rm -f index.html
+	rm -f index.html rss.xml rss-fail.xml
 [% FOREACH test IN folders; -%]
 	cd [% test %] && make clean
 [% END; -%]
